agregando otra pagian en astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,3 @@
----
-
----
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -11,9 +7,8 @@
 		<title>qlq</title>
 	</head>
 	<body>
-		<h1>hola mundo xd</h1>
-		<h1>¡Soy un desarrollador de Astro!</h1>
-		<a href="">Inicio</a>
+		<h1>en la pagina de about</h1>
+		<a href="/">Inicio</a>
         <br>
         <a href="/about/">Sobre nosotros</a>
         <br>
