aprendiendo a trabajar con componentes y un poco mas de js , mas de css , y el slot que es una parte dinamica , sin afectar a la maqueta

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,3 +1,6 @@
+---
+const pageTitle = "usando varibles en astro :D";
+---
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -7,11 +10,7 @@
 		<title>qlq</title>
 	</head>
 	<body>
-		<h1>en la pagina de about</h1>
-		<a href="/">Inicio</a>
-        <br>
-        <a href="/about/">Sobre nosotros</a>
-        <br>
-        <a href=""> idk brother</a>
+		<h1>hola mundo xd</h1>
+		<h1>¡Soy un desarrollador de Astro!</h1>
 	</body>
 </html>
