--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,8 @@
 ---
-
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = "enfocados 2025";
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>qlq</title>
-	</head>
-	<body>
-		<h1>hola mundo xd</h1>
-		<h1>¡Soy un desarrollador de Astro!</h1>
-		<a href="">Inicio</a>
-        <br>
-        <a href="/about/">Sobre nosotros</a>
-        <br>
-        <a href=""> idk brother</a>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>abadakadabra</h2>
+  <h3>no seeeeeeeeee</h3>
+</BaseLayout>
