--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,4 +5,5 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/contact/">Contacto</a>
+    <a href="/tags/">Tags</a>
 </div>
