--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,12 +1,14 @@
 ---
 import Navigation from "./Navigation.astro";
 import Hamburger from "./hamburger.astro";
+import ThemeIcon from './ThemeIcon.astro';
 ---
 
 
 <header>
 
     <Hamburger></Hamburger>
+    <ThemeIcon />
     <Navigation></Navigation>
-    
+
 </header>
