--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,7 +20,7 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
 const frutas=["manzana","pera","platano"]
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = "navy";
